external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_const_only_no_wildcard.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/matching/invalid_const_only_no_wildcard.move:11:12
   │
11 │     match (x) {
   │            ^ Pattern '_' not covered
   │
   = Match arms with guards are not considered for coverage.
